增加设置